updated design and animations

--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
     
     <button id="nav-btn" title="Open navigation">
         <b>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
+            <i class="i1"></i>
+            <i class="i2"></i>
+            <i class="i3"></i>
+            <i class="i4"></i>
         </b>
     </button>
     
     <nav class="hidden">
         <div class="overlay"></div>
-        <div class="background">
+        <div class="container">
             <div class="rect r1 red"></div>
             <div class="rect r2 orange"></div>
             <div class="rect r3 blue"></div>
