added 'to top' button

--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
         </div>
     </nav>
     
+    <button id=to-top title="Go to top">
+        <b>
+            <i class=head1></i>
+            <i class=head2></i>
+            <i class=bar></i>
+        </b>
+    </button>
+    
     <script>
         var nav_btn = document.getElementById('hamburger-btn');
         var nav = document.getElementsByTagName('nav')[0];
