--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
             <div class="r10"></div>
         </div>
         <div class=content>
-            <a class=a1 href="#about">About</a><br />
+            <a class="a1 active" href="#about">About</a><br />
             <a class=a2 href="#projects">Projects</a><br />
             <a class=a3 href="#contact">Contact</a>
+            <div class=hover-bg></div>
         </div>
     </nav>
     
