increase size of language buttons

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
         <div class=content>
             <button class=cross title="Close menu"></button>
             <div class="center">
-                <a class="en current">English</a>
-                <a class=de href="/de">Deutsch <span>(German)</span></a>
+                <a class="en current" title="English is selected">English</a>
+                <a class=de href="/de" title="Select German">Deutsch</a>
             </div>
         </div>
     </div>
