translated descriptions of technologies

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </div><br />
             <div class=desc>
                 <span lang=en>a web developer from<br /><b>Germany</b>.</span>
-                <span lang=de>ein Web Developer aus<br /><b>Deutschland</b>.</span>
+                <span lang=de>ein Web-Entwickler aus<br /><b>Deutschland</b>.</span>
             </div>
             
         </section>
@@ -201,25 +201,41 @@
                 <li class=html>
                     <span>HTML</span>
                     <div class=desc>
-                        <p>HTML is a markup language for documents shown in web browsers.<br /><a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a></p>
+                        <p>
+                            <span lang=en>HTML is a markup language for documents shown in web browsers.</span>
+                            <span lang=de>HTML ist eine Auszeichnungssprache für Dokumente, die in Webbrowsern angezeigt werden.</span>
+                            <br /><a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a>
+                        </p>
                     </div>
                 </li>
                 <li class=css>
                     <span>CSS/Sass</span>
                     <div class=desc>
-                        <p>CSS is a style sheet language used to describe the look of websites written in HTML.<br /><a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a></p>
+                        <p>
+                            <span lang=en>CSS is a style sheet language used to describe the look of websites written in HTML.</span>
+                            <span lang=de>CSS ist eine Stylesheet-Sprache zum Beschreiben des Aussehen von in HTML geschriebenen Websites.</span>
+                            <br /><a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a>
+                        </p>
                     </div>
                 </li>
                 <li class=svg>
                     <span>SVG</span>
                     <div class=desc>
-                        <p>SVGs are XML-based vector graphics with animation and interactivity support.<br /><a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a></p>
+                        <p>
+                            <span lang=en>SVGs are XML-based vector graphics with animation and interactivity support.</span>
+                            <span lang=de>SVGs sind XML-basierte Vektorgrafiken mit Unterstützung für Animationen und Interaktivität.</span>
+                            <br /><a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a>
+                        </p>
                     </div>
                 </li>
                 <li class=js>
                     <span>JavaScript</span>
                     <div class=desc>
-                        <p>JavaScript is a scripting language, mostly used for web development.<br /><a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a></p>
+                        <p>
+                            <span lang=en>JavaScript is a scripting language, mostly used for web development.</span>
+                            <span lang=de>JavaScript ist eine Skriptsprache, die hauptsächlich für die Webentwicklung verwendet wird.</span>
+                            <br /><a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a>
+                        </p>
                     </div>
                 </li>
             </ul>
@@ -230,7 +246,11 @@
                 <li class=php>
                     <span>PHP</span>
                     <div class=desc>
-                        <p>PHP is a programming language designed for web development to pre-process hypertext.<br /><a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a></p>
+                        <p>
+                            <span lang=en>PHP is a programming language designed for web development to pre-process hypertext.</span>
+                            <span lang=de>PHP ist eine Programmiersprache für Web Entwicklung zum Verarbeiten von Hypertext.</span>
+                            <br /><a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a>
+                        </p>
                     </div>
                 </li>
             </ul>
@@ -244,19 +264,31 @@
                 <li class=java>
                     <span>Java</span>
                     <div class=desc>
-                        <p>Java is a object-oriented programming language.<br /><a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a></p>
+                        <p>
+                            <span lang=en>Java is a object-oriented programming language.</span>
+                            <span lang=de>Java ist eine objekt-orientierte Programmiersprache.</span>
+                            <br /><a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a>
+                        </p>
                     </div>
                 </li>
                 <li class=csharp>
                     <span>C#</span>
                     <div class=desc>
-                        <p>C# is a multi-paradigm programming language.<br /><a href="https://github.com/dotnet/docs/blob/cb475ed45f881e9462e34764480d3b0ebce85e91/docs/images/hub/csharp.svg" target="_blank" rel="noopener noreferrer">&copy; icon</a></p>
+                        <p>
+                            <span lang=en>C# is a multi-paradigm programming language.</span>
+                            <span lang=de>C# ist eine Multi-Paradigma-Programmiersprache.</span>
+                            <br /><a href="https://github.com/dotnet/docs/blob/cb475ed45f881e9462e34764480d3b0ebce85e91/docs/images/hub/csharp.svg" target="_blank" rel="noopener noreferrer">&copy; icon</a>
+                        </p>
                     </div>
                 </li>
                 <li class=cpp>
                     <span>C++</span>
                     <div class=desc>
-                        <p>C++ is a object-oriented programming language.<br /><a href="https://commons.wikimedia.org/wiki/File:ISO_C%2B%2B_Logo.svg" target="_blank" rel="noopener noreferrer">&copy; icon</a></p>
+                        <p>
+                            <span lang=en>C++ is a object-oriented programming language.</span>
+                            <span lang=de>C++ ist eine objekt-orientierte Programmiersprache.</span>
+                            <br /><a href="https://commons.wikimedia.org/wiki/File:ISO_C%2B%2B_Logo.svg" target="_blank" rel="noopener noreferrer">&copy; icon</a>
+                        </p>
                     </div>
                 </li>
             </ul>
@@ -270,25 +302,41 @@
                 <li class=camtasia>
                     <span>Camtasia Studio</span>
                     <div class=desc>
-                        <p>Camtasia Studio is a software suite for creating and editing videos.<br /><a href="https://www.techsmith.com/download-logo.html" target="_blank" rel="noopener noreferrer">&copy; icon</a></p>
+                        <p>
+                            <span lang=en>Camtasia Studio is a software suite for creating and editing videos.</span>
+                            <span lang=de>Camtasia Studio ist eine Software zum Erstellen und Bearbeiten von Videos.</span>
+                            <br /><a href="https://www.techsmith.com/download-logo.html" target="_blank" rel="noopener noreferrer">&copy; icon</a>
+                        </p>
                     </div>
                 </li>
                 <li class=gimp>
                     <span>Gimp</span>
                     <div class=desc>
-                        <p>Gimp is a raster graphics editor for retouching, editing and free-form drawing.<br /><a href="https://www.gimp.org/" target="_blank" rel="noopener noreferrer">&copy; icon</a></p>
+                        <p>
+                            <span lang=en>Gimp is an editor for graphics retouching and editing, and free-form drawing.</span>
+                            <span lang=de>Gimp ist ein Editor für das Retuschieren und Bearbeiten von Grafiken.</span>
+                            <br /><a href="https://www.gimp.org/" target="_blank" rel="noopener noreferrer">&copy; icon</a>
+                        </p>
                     </div>
                 </li>
                 <li class=github>
                     <span>GitHub</span>
                     <div class=desc>
-                        <p>GitHub is a hoster for version-control using Git.<br /><a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a></p>
+                        <p>
+                            <span lang=en>GitHub is a hosting-service for version-control using Git.</span>
+                            <span lang=de>GitHub ist ein Hosting-Dienst für Version-Kontrolle mittels Git.</span>
+                            <br /><a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a>
+                        </p>
                     </div>
                 </li>
                 <li class=unity>
                     <span>Unity</span>
                     <div class=desc>
-                        <p>Unity is a cross-platform game angine using C#.<br /><a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a></p>
+                        <p>
+                            <span lang=en>Unity is a cross-platform game angine that uses C#.</span>
+                            <span lang=de>Unity ist eine plattformübergreifende Spiele-Engine, die C# nutzt.</span>
+                            <br /><a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a>
+                        </p>
                     </div>
                 </li>
             </ul>
