--- a/index.html
+++ b/index.html
@@ -150,45 +150,45 @@
             </h2><br />
 
             <figure class="project time-visualizer" used="js html css">
-                <figcaption class="desc red">
+                <figcaption class=desc>
                     <div class=center>
                         <h3>
                             <span lang=en>Time Visualizer</span>
                             <span lang=de>Zeit Visualisierer</span>
                         </h3>
                         <p>
-                            <span lang=en>Web app for visualizing data changes over time</span>
-                            <span lang=de>Web App für das Visualisieren von Datenänderungen über Zeit</span>
+                            <span lang=en>A simple web tool for visualizing data over time</span>
+                            <span lang=de>Ein simples Web-Tool für das Visualisieren von Daten über Zeit</span>
                         </p>
-                        <a href="https://christiandunkel.github.io/time-visualizer">Demo</a>
-                        <a href="https://github.com/christiandunkel/time-visualizer">Code</a>
+                        <a href="https://christiandunkel.github.io/time-visualizer" title="Visit the website" title-de="Besuche die Webseite" target="_blank" rel="noopener noreferrer"></a>
+                        <a href="https://github.com/christiandunkel/time-visualizer" title="Github Repository" title-de="Besuche die Webseite" target="_blank" rel="noopener noreferrer"></a>
                     </div>
                 </figcaption>
             </figure>
 
             <figure class="project tensquared" used="csharp">
-                <figcaption class="desc green">
+                <figcaption class=desc>
                     <div class=center>
                         <h3>tensquared</h3>
                         <p>
                             <span lang=en>2D puzzle platform game made in Unity</span>
                             <span lang=de>2D Puzzle Platformer Spiel erstellt in Unity</span>
                         </p>
-                        <a href="https://github.com/christiandunkel/tensquared/releases">Download</a>
-                        <a href="https://github.com/christiandunkel/tensquared">Code</a>
+                        <a href="https://github.com/christiandunkel/tensquared/releases" title="Download the game" title-de="Lade das Spiel herunter" target="_blank" rel="noopener noreferrer"></a>
+                        <a href="https://github.com/christiandunkel/tensquared" title="Github Repository" target="_blank" rel="noopener noreferrer"></a>
                     </div>
                 </figcaption>
             </figure>
 
             <figure class="project raytracer" used="cpp">
-                <figcaption class="desc blue">
+                <figcaption class=desc>
                     <div class=center>
                         <h3>Raytracer</h3>
                         <p>
                             <span lang=en>C++ Raytracer with shading, reflection, transparency &amp; more</span>
                             <span lang=de>C++ Raytracer mit Schatten, Reflektion, Transparenz &amp; mehr</span>
                         </p>
-                        <a href="https://github.com/christiandunkel/raytracer">Code</a>
+                        <a href="https://github.com/christiandunkel/raytracer" title="Github Repository" target="_blank" rel="noopener noreferrer"></a>
                     </div>
                 </figcaption>
             </figure>
@@ -244,8 +244,6 @@
                     </li>
                 </ul>
 
-                <hr />
-
                 <ul>
                     <li class=php>
                         <span>PHP</span>
@@ -258,8 +256,6 @@
                         </div>
                     </li>
                 </ul>
-
-                <hr />
 
                 <ul>
                     <li class=java>
@@ -293,8 +289,6 @@
                         </div>
                     </li>
                 </ul>
-
-                <hr />
 
                 <ul>
                     <li class=camtasia>
