added scroll indicator

--- a/index.html
+++ b/index.html
@@ -131,13 +131,15 @@
                     <span lang=en>Hi, I'm</span>
                     <span lang=de>Ich bin</span>
                 </div><br />
-                <div class=name>
-                    <span>Christian</span>,
-                </div><br />
+                <div class=name><span>Christian</span>,</div><br />
                 <div class=desc>
                     <span lang=en>a web developer from<br /><b>Germany</b>.</span>
                     <span lang=de>ein Web-Entwickler aus<br /><b>Deutschland</b>.</span>
                 </div>
+            </div>
+            
+            <div id=scroll-indicator>
+                <div class=circle></div>
             </div>
             
         </section>
@@ -262,7 +264,7 @@
                         <span>Java</span>
                         <div class=desc>
                             <p>
-                                <span lang=en>Java is a object-oriented programming language.</span>
+                                <span lang=en>Java is an object-oriented programming language.</span>
                                 <span lang=de>Java ist eine objekt-orientierte Programmiersprache.</span>
                                 <br /><a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a>
                             </p>
@@ -282,7 +284,7 @@
                         <span>C++</span>
                         <div class=desc>
                             <p>
-                                <span lang=en>C++ is a object-oriented programming language.</span>
+                                <span lang=en>C++ is an object-oriented programming language.</span>
                                 <span lang=de>C++ ist eine objekt-orientierte Programmiersprache.</span>
                                 <br /><a href="https://commons.wikimedia.org/wiki/File:ISO_C%2B%2B_Logo.svg" target="_blank" rel="noopener noreferrer">&copy; icon</a>
                             </p>
