--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             
             // get current language e.g. "en"
             // not really reliable, but best option since there's no back-end on Github pages
-            var lang_code = window.navigator.languages ? window.navigator.languages[1] : 
+            var lang_code = window.navigator.languages ? window.navigator.languages[0] : 
                             (window.navigator.userLanguage ||
-                             window.navigator.browserLangague ||
+                             window.navigator.browserLanguage ||
                              window.navigator.language).substring(0,2);
             
             // check if user uses supported language besides English
