--- a/index.html
+++ b/index.html
@@ -60,13 +60,15 @@
 
     <nav id=nav>
         <div class=bar>
+            
+            <a class=logo href="#html"><i></i></a>
 
             <div id=mobile-menu>
                 <div class=overlay></div>
                 <div class="content">
                     
                     <div class="center">
-                        <a class="a0 active" href="#html" title="Home" title-de="Nach oben"></a>
+                        <a class="a0 active" href="#html"></a>
                         <a class=a1 href="#projects">
                             <span lang=en>Projects</span>
                             <span lang=de>Projekte</span>
