fixed responsive font sizes

--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
                 <span lang=en>Projects</span>
                 <span lang=de>Projekte</span>
             </h2>
+            
+            <p class=responsive>De-select the <b>categories</b> you don't want to show:</p>
 
             <figure class="project time-visualizer" used="js html css">
                 <figcaption class=desc>
