--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="Christian Dunkel">
     <meta property="og:description" content="I'm a web developer from Germany. Check out my projects that range from websites to Javascript libraries.">
 
-    <meta name="theme-color" content="#d8d8d8">
+    <meta name="theme-color" content="#c2e3ff">
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
