fixed intro text not centering in IE

--- a/index.html
+++ b/index.html
@@ -112,15 +112,17 @@
     
         <section id=about>
 
-            <div class=center>
-                <div class=greet>
-                    <span lang=en>Hi, I'm</span>
-                    <span lang=de>Ich bin</span>
-                </div><br />
-                <div class=name><span>Christian</span>,</div><br />
-                <div class=desc>
-                    <span lang=en>a web developer from<br /><b>Germany</b>.</span>
-                    <span lang=de>ein Web-Entwickler aus<br /><b>Deutschland</b>.</span>
+            <div class=flex>
+                <div class=center>
+                    <div class=greet>
+                        <span lang=en>Hi, I'm</span>
+                        <span lang=de>Ich bin</span>
+                    </div><br />
+                    <div class=name><span>Christian</span>,</div><br />
+                    <div class=desc>
+                        <span lang=en>a web developer from<br /><b>Germany</b>.</span>
+                        <span lang=de>ein Web-Entwickler aus<br /><b>Deutschland</b>.</span>
+                    </div>
                 </div>
             </div>
             
