update comments and titles

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <nav id=nav>
         <div class=bar>
             
-            <a class=logo href="#html"><i></i></a>
+            <a class=logo href="#html" title="Go to top" title-de="Nach oben"><i></i></a>
 
             <div id=mobile-menu>
                 <div class=overlay></div>
@@ -96,7 +96,7 @@
                 </div>
             </div>
             
-            <button id=hamburger-btn title="Open the navigation" title-de="Öffne die Navigation">
+            <button id=hamburger-btn title="Toggle menu" title-de="Öffne und schließe das Menü">
                 <b>
                     <i class=i1></i>
                     <i class=i2></i>
