--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="Christian Dunkel">
     <meta property="og:description" content="I'm a web developer from Germany. Check out my projects that range from websites to Javascript libraries.">
 
-    <meta name="theme-color" content="#c2e3ff">
+    <meta name="theme-color" content="#5e9cff">
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -396,8 +396,8 @@
             </p>
             
             <a class="responsive mail" href="mailto:">
-                <span lang=en>Get in touch</span>
-                <span lang=de>Kontaktiere mich</span>
+                <span lang=en>Get in touch &rarr;</span>
+                <span lang=de>Kontaktiere mich &rarr;</span>
             </a>
             
             <hr />
