updated layout of technologies section

--- a/index.html
+++ b/index.html
@@ -249,133 +249,133 @@
 
                 <ul>
                     <li class=html>
+                        <!-- icon by https://icomoon.io -->
                         <span>HTML</span>
-                        <div class=desc>
+                        <button class=desc>
                             <p>
                                 <span lang=en>HTML is a markup language for documents shown in web browsers.</span>
                                 <span lang=de>HTML ist eine Auszeichnungssprache für Dokumente, die in Webbrowsern angezeigt werden.</span>
-                                <a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a>
                             </p>
-                        </div>
+                        </button>
                     </li>
                     <li class=css>
+                        <!-- icon by https://icomoon.io -->
                         <span>CSS/Sass</span>
-                        <div class=desc>
+                        <button class=desc>
                             <p>
                                 <span lang=en>CSS is a style sheet language used to describe the look of websites written in HTML.</span>
                                 <span lang=de>CSS ist eine Stylesheet-Sprache zum Beschreiben des Aussehen von in HTML geschriebenen Websites.</span>
-                                <a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a>
                             </p>
-                        </div>
+                        </button>
                     </li>
                     <li class=svg>
+                        <!-- icon by https://icomoon.io -->
                         <span>SVG</span>
-                        <div class=desc>
+                        <button class=desc>
                             <p>
                                 <span lang=en>SVGs are XML-based vector graphics with animation and interactivity support.</span>
                                 <span lang=de>SVGs sind XML-basierte Vektorgrafiken mit Unterstützung für Animationen und Interaktivität.</span>
-                                <a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a>
                             </p>
-                        </div>
+                        </button>
                     </li>
                     <li class=js>
+                        <!-- icon by https://icomoon.io -->
                         <span>JavaScript</span>
-                        <div class=desc>
+                        <button class=desc>
                             <p>
                                 <span lang=en>JavaScript is a scripting language, mostly used for web development.</span>
                                 <span lang=de>JavaScript ist eine Skriptsprache, die hauptsächlich für die Webentwicklung verwendet wird.</span>
-                                <a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a>
                             </p>
-                        </div>
+                        </button>
                     </li>
                 </ul>
 
                 <ul>
                     <li class=php>
+                        <!-- icon by https://icomoon.io -->
                         <span>PHP</span>
-                        <div class=desc>
+                        <button class=desc>
                             <p>
                                 <span lang=en>PHP is a programming language designed for web development to pre-process hypertext.</span>
                                 <span lang=de>PHP ist eine Programmiersprache für Web Entwicklung zum Verarbeiten von Hypertext.</span>
-                                <a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a>
                             </p>
-                        </div>
+                        </button>
                     </li>
                 </ul>
 
                 <ul>
                     <li class=java>
+                        <!-- icon by https://icomoon.io -->
                         <span>Java</span>
-                        <div class=desc>
+                        <button class=desc>
                             <p>
                                 <span lang=en>Java is an object-oriented programming language.</span>
                                 <span lang=de>Java ist eine objekt-orientierte Programmiersprache.</span>
-                                <a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a>
                             </p>
-                        </div>
+                        </button>
                     </li>
                     <li class=csharp>
+                        <!-- icon: https://github.com/dotnet/docs/blob/cb475ed45f881e9462e34764480d3b0ebce85e91/docs/images/hub/csharp.svg -->
                         <span>C#</span>
-                        <div class=desc>
+                        <button class=desc>
                             <p>
                                 <span lang=en>C# is a multi-paradigm programming language.</span>
                                 <span lang=de>C# ist eine Multi-Paradigma-Programmiersprache.</span>
-                                <a href="https://github.com/dotnet/docs/blob/cb475ed45f881e9462e34764480d3b0ebce85e91/docs/images/hub/csharp.svg" target="_blank" rel="noopener noreferrer">&copy; icon</a>
                             </p>
-                        </div>
+                        </button>
                     </li>
                     <li class=cpp>
+                        <!-- icon: https://commons.wikimedia.org/wiki/File:ISO_C%2B%2B_Logo.svg -->
                         <span>C++</span>
-                        <div class=desc>
+                        <button class=desc>
                             <p>
                                 <span lang=en>C++ is an object-oriented programming language.</span>
                                 <span lang=de>C++ ist eine objekt-orientierte Programmiersprache.</span>
-                                <a href="https://commons.wikimedia.org/wiki/File:ISO_C%2B%2B_Logo.svg" target="_blank" rel="noopener noreferrer">&copy; icon</a>
                             </p>
-                        </div>
+                        </button>
                     </li>
                 </ul>
 
                 <ul>
                     <li class=camtasia>
+                        <!-- icon: https://www.techsmith.com/download-logo.html -->
                         <span>Camtasia Studio</span>
-                        <div class=desc>
+                        <button class=desc>
                             <p>
                                 <span lang=en>Camtasia Studio is a software suite for creating and editing videos.</span>
                                 <span lang=de>Camtasia Studio ist eine Software zum Erstellen und Bearbeiten von Videos.</span>
-                                <a href="https://www.techsmith.com/download-logo.html" target="_blank" rel="noopener noreferrer">&copy; icon</a>
                             </p>
-                        </div>
+                        </button>
                     </li>
                     <li class=gimp>
+                        <!-- icon by https://www.gimp.org/ -->
                         <span>Gimp</span>
-                        <div class=desc>
+                        <button class=desc>
                             <p>
                                 <span lang=en>Gimp is an editor for graphics retouching and editing, and free-form drawing.</span>
                                 <span lang=de>Gimp ist ein Editor für das Retuschieren und Bearbeiten von Grafiken.</span>
-                                <a href="https://www.gimp.org/" target="_blank" rel="noopener noreferrer">&copy; icon</a>
                             </p>
-                        </div>
+                        </button>
                     </li>
                     <li class=github>
+                        <!-- icon by https://icomoon.io -->
                         <span>GitHub</span>
-                        <div class=desc>
+                        <button class=desc>
                             <p>
                                 <span lang=en>GitHub is a hosting-service for version-control using Git.</span>
                                 <span lang=de>GitHub ist ein Hosting-Dienst für Version-Kontrolle mittels Git.</span>
-                                <a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a>
                             </p>
-                        </div>
+                        </button>
                     </li>
                     <li class=unity>
+                        <!-- icon by https://icomoon.io -->
                         <span>Unity</span>
-                        <div class=desc>
+                        <button class=desc>
                             <p>
                                 <span lang=en>Unity is a cross-platform game angine that uses C#.</span>
                                 <span lang=de>Unity ist eine plattformübergreifende Spiele-Engine, die C# nutzt.</span>
-                                <a href="https://icomoon.io" target="_blank" rel="noopener noreferrer">&copy; icon</a>
                             </p>
-                        </div>
+                        </button>
                     </li>
                 </ul>
                 
