--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
                 <figure>
                     <div class=img style="background-image: url(img/project-raytracer.png)"></div>
                     <figcaption>
-                        <span lang=en>This C++ <b>Raytracer</b> supports rendering of simple shades with shading, reflection, transparency &amp; more.</span>
-                        <span lang=de>Dieser C++ <b>Raytracer</b> unterstützt das Rendern simpler Objekte mit Schaftten, Reflektion, Transparenz &amp; mehr.</span>
+                        <span lang=en>This C++ <b>Raytracer</b> supports rendering of simple shapes with shading, reflection, transparency &amp; more.</span>
+                        <span lang=de>Dieser C++ <b>Raytracer</b> unterstützt das Rendern simpler Objekte mit Schatten, Reflektion, Transparenz &amp; mehr.</span>
                     </figcaption>
                 </figure>
                 
