--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                         <div class=img style="background-image: url(img/project-power-prefixer.png)"></div>
                         <figcaption>
                             <span lang=en>The <b>Power Prefixer</b> is a Sass/SCSS library for automatically prefixing CSS properties.</span>
-                            <span lang=de>Der <b>Power Prefixer</b> ist eine Sass/SCSS Library zum automatischen Hinzufügen von CSS Prefixen.</span>
+                            <span lang=de>Der <b>Power Prefixer</b> ist eine Sass/SCSS Bibliothek zum automatischen Hinzufügen von CSS Prefixen.</span>
                         </figcaption>
                     </figure>
 
