added show-info buttons to project cards on mobile view

--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
 
                     <figure>
                         <div class=img style="background-image: url(img/project-time-visualizer.png)"></div>
+                        <button class=project-show-info-btn title="Show more information"></button>
                         <figcaption>
                             <span lang=en><b>Time Visualizer</b> is a simple web tool for visualizing data over time.</span>
                             <span lang=de>Der <b>Zeit Visualisierer</b> ist ein simples Web-Tool für das Visualisieren von Daten über Zeit.</span>
@@ -241,6 +242,7 @@
 
                     <figure>
                         <div class=img style="background-image: url(img/project-power-prefixer.png)"></div>
+                        <button class=project-show-info-btn title="Show more information"></button>
                         <figcaption>
                             <span lang=en>The <b>Power Prefixer</b> is a Sass/SCSS library for automatically prefixing CSS properties.</span>
                             <span lang=de>Der <b>Power Prefixer</b> ist eine Sass/SCSS Bibliothek zum automatischen Hinzufügen von CSS Prefixen.</span>
@@ -261,6 +263,7 @@
 
                     <figure>
                         <div class=img style="background-image: url(img/project-tensquared.jpg)"></div>
+                        <button class=project-show-info-btn title="Show more information"></button>
                         <figcaption>
                             <span lang=en><b>tensquared</b> is a 2D puzzle platform game made in Unity.</span>
                             <span lang=de><b>tensquared</b> ist ein 2D Puzzle Platformer Spiel erstellt in Unity.</span>
@@ -280,6 +283,7 @@
 
                     <figure>
                         <div class=img style="background-image: url(img/project-raytracer.png)"></div>
+                        <button class=project-show-info-btn title="Show more information"></button>
                         <figcaption>
                             <span lang=en>This C++ <b>Raytracer</b> supports rendering of simple shapes with shading, reflection, transparency &amp; more.</span>
                             <span lang=de>Dieser C++ <b>Raytracer</b> unterstützt das Rendern simpler Objekte mit Schatten, Reflektion, Transparenz &amp; mehr.</span>
