--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Christian Dunkel - Web Developer</title>
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,user-scalable=0,minimum-scale=1.0,maximum-scale=1.0" />
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,user-scalable=0,minimum-scale=1.0" />
 
     <link rel="canonical" href="https://christiandunkel.github.io" />
     <meta name="description" content="I'm a web developer from Germany. Check out my projects that range from websites to Javascript libraries." />
@@ -68,7 +68,7 @@
                 <div class="content">
                     
                     <div class="center">
-                        <a class="a0 active" href="#html"></a>
+                        <a class="a0 active" href="#html" title="To top" title-de="Nach oben"></a>
                         <a class=a1 href="#projects">
                             <span lang=en>Projects</span>
                             <span lang=de>Projekte</span>
@@ -122,7 +122,7 @@
                             <span lang=en>Hi, I'm</span>
                             <span lang=de>Ich bin</span>
                         </div><br />
-                        <div class=name><span>Christian</span>,</div><br />
+                        <h1 class=name><span>Christian</span>,</h1><br />
                         <div class=desc>
                             <span lang=en>a web developer from<br /><b>Germany</b>.</span>
                             <span lang=de>ein Web-Entwickler aus<br /><b>Deutschland</b>.</span>
